crates/id_effect/tests/ui/require_env_form.stderr
error: require!(env, Key) was removed in id_effect 3.0; use require!(Key) inside effect! or Needs::<Key>::need(env)
 --> tests/ui/require_env_form.rs:8:13
  |
8 |     let _ = id_effect::require!(env, CounterKey);
  |             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  |
  = note: this error originates in the macro `id_effect::require` (in Nightly builds, run with -Z macro-backtrace for more info)

warning: unused import: `Needs`
 --> tests/ui/require_env_form.rs:1:30
  |
1 | use id_effect::{Effect, Env, Needs};
  |                              ^^^^^
  |
  = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default
